--- a/src/main/resources/webapp/backend/src/assets/styles/global.css
+++ b/src/main/resources/webapp/backend/src/assets/styles/global.css
@@ -4,3 +4,18 @@ html, body {
     width: 100%;
     height: 100%;
 }
+:root {
+    --app-header-h: 60px;
+}
+.mobile-overlay-below-header {
+    top: var(--app-header-h) !important;
+    height: calc(100% - var(--app-header-h)) !important;
+}
+
+.mobile-panel-below-header {
+    top: var(--app-header-h) !important;
+    height: calc(100% - var(--app-header-h)) !important;
+}
+.mobile-drawer-body {
+    padding: 0 !important;
+}
